<resources>
    <string name="app_name">MyFood</string>
    <string name="textIntro">Hello Adila,</string>
    <string name="subtextIntro">What do you want to eat today?</string>
    <string name="button_started">Get Started</string>
    <string name="categoriesTitle">Categories</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="header_food">Food</string>
    <string name="header_title">The Fastest in</string>
    <string name="header_delivery">Delivery</string>
    <string name="title_menu_list">Food Menu List</string>
    <string name="price_burger">Rp. 28.000</string>
    <string name="salmon_sushi">Salmon Sushi</string>
    <string name="price_dimsum">Rp. 10.000</string>
    <string name="price_ayam">Rp. 35.000</string>
    <string name="desc_ic_cart">ini adalah icon cart</string>
    <string name="desc_ic_people">ini adalah icon people</string>
    <string name="desc_banner">ini adalah banner iklan aplikasi delivery</string>
    <string name="desc_illustration">ini adalah illustrasi delivery makanan</string>
    <string name="icon_pizza">icon pizza</string>
    <string name="burger">Burger</string>
    <string name="pizza">Pizza</string>
    <string name="icon_burger">icon burger</string>
    <string name="icon_ice_cream">icon ice cream</string>
    <string name="snack">Snack</string>
    <string name="illust_dimsum">ini adalah gambar dimsum</string>
    <string name="drink">Drink</string>
    <string name="icon_drink">icon drink</string>
    <string name="illust_burger">ini merupakan gambar burger</string>
    <string name="illust_sushi">ini merupakan gambar sushi</string>
    <string name="desc_ayam_goreng">ini merupakan gambar ayam goreng</string>
    <string name="price_sushi">Rp.20.000</string>
    <string name="dimsum">Dimsum</string>
    <string name="switch_layout">ubah bentuk layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="keranjang">Keranjang</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
</resources>